--- a/SeleniumBasic/pom.xml
+++ b/SeleniumBasic/pom.xml
@@ -34,6 +34,13 @@
             <version>5.0.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
