--- a/SeleniumBasic/pom.xml
+++ b/SeleniumBasic/pom.xml
@@ -41,6 +41,14 @@
             <version>5.2.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.5</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
