--- a/SeleniumBasic/pom.xml
+++ b/SeleniumBasic/pom.xml
@@ -49,12 +49,13 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.sikuli/sikuli-api -->
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
         <dependency>
-            <groupId>org.sikuli</groupId>
-            <artifactId>sikuli-api</artifactId>
-            <version>1.2.0</version>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.9</version>
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
         <dependency>
